# mcpresso

./: .env.example  .gitignore  LICENSE  Local_Test_Command.md  README.md  brewed_server.py  demo_server.py  postgres_server.py  pyproject.toml
mcpresso/: __init__.py  benchmark.py  cli.py  clientgen.py  generator.py  models.py  pipeline.py  registry.py  repair.py  scorer.py  testgen.py  validator.py
tests/: __init__.py  test_registry.py  test_scorer.py  test_validator.py
