[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpresso"
version = "0.1.0"
description = "Brew your MCP server in under 60 seconds"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "MCPresso Team", email = "iamsanjoykb@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "llm", "code-generation", "ai", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.25.0",
  "mcp>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "radon>=6.0.1",
  "sentence-transformers>=2.7.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.9.0",
  "ruff>=0.4.0",
  "black>=24.0.0",
]

[project.scripts]
mcpresso = "mcpresso.cli:main"

[project.urls]
Homepage = "https://github.com/mcpresso/mcpresso"
Documentation = "https://mcpresso.readthedocs.io"
Repository = "https://github.com/mcpresso/mcpresso"
"Bug Tracker" = "https://github.com/mcpresso/mcpresso/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcpresso"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mcpresso"]
omit = ["tests/*"]
